<resources>
    <string name="app_name">Masters Project</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="forgot_password">Forgotten your password?</string>
    <string name="account_already">Created an account? Sign in</string>
    <string name="to_sign_up">Not got an account yet? Sign up!</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="return_to_sign_in">Return To Sign In</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="activities_label">Activities!</string>
    <string name="youveCompleted">You\'ve Completed:</string>
    <string name="sports">Sports &amp; Exercise</string>
    <string name="outdoors">Outdoors</string>
    <string name="nature">Nature &amp; Wildlife</string>
    <string name="games">Games</string>
    <string name="art">Arts</string>
    <string name="Historic">Historic</string>
    <string name="activity_name_holder">Activity Name</string>
    <string name="description_holder">Description</string>
    <string name="filter1_holder">Filter1</string>
    <string name="filter2_holder">Filter2</string>
    <string name="price_bracket_holder">Price Bracket</string>
    <string name="visit_website">Visit Website</string>
    <string name="project_name">Masters Project</string>
    <string name="submitButton">Apply</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_map_test">MapTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>