<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/rounded_edittext_background"
    android:padding="10dp">

    <CheckBox
        android:id="@+id/checkBoxSports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sports"
        android:checked="true" />

    <CheckBox
        android:id="@+id/checkBoxOutdoors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/outdoors"
        android:checked="true" />

    <CheckBox
        android:id="@+id/checkBoxNature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nature"
        android:checked="true" />

    <CheckBox
        android:id="@+id/checkBoxGames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/games"
        android:checked="true" />

    <CheckBox
        android:id="@+id/checkBoxArts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/art"
        android:checked="true" />

    <CheckBox
        android:id="@+id/checkBoxHistoric"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Historic"
        android:checked="true" />
</LinearLayout>

